Bug 236604 - icons for contacts with photo are too small in contacts list
Summary: icons for contacts with photo are too small in contacts list
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-06 20:51 UTC by Janet
Modified: 2010-05-07 22:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Janet 2010-05-06 20:51:06 UTC
Version:           4.4.2 (using 4.4.2 (KDE 4.4.2), Kubuntu packages)
Compiler:          cc
OS:                Linux (i686) release 2.6.32-22-generic

There's a small gui bug which makes the contacts' list look a little messy when some contacts have photos and the icon size for small icons is set to larger than 16x16: The contacts without photo are shown in the list with the standard vcard-icon in the size of the small icons, let's say 22x22, and the contacts containing a photo are shown with the photo in size 16x16. Therefore the list looks like dancing. The contacts' names are not aligned and the spaces between the rows differ. 

Expected behaviour: The photos also should be scaled to the small icons' size so that all icons in the list are of the same height and all rows have the same space between them. When the photos are scaled exactely to small icons' size the entries in the list would also be aligned properly. 

Extra idea: But as the photos are not of same ratio as the standard icons (why not?) they IMHO should be scaled according to their ratio: height like the small icons' height and then maybe put onto a white canvas so that the aspect ratio of the other icons is mimicked while the photos keep their ratio. This would have the same effect of aligning everything properly but would look nicer IMHO because faces are not distorted.
Comment 1 Tobias Koenig 2010-05-07 15:48:50 UTC
SVN commit 1123974 by tokoe:

Use the same icon height for custom photos as for the
default icon

BUG: 236604


 M  +5 -2      contactstreemodel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1123974
Comment 2 Janet 2010-05-07 22:32:07 UTC
That was quick - thanks :)