Use the same icon height for custom photos as for the default icon

BUG: 236604

svn path=/trunk/KDE/kdepimlibs/; revision=1123974